# bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py  0002_rename_name_product_title.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
